# AgenticAI-with-Python

./: README.md  pyproject.toml
Jupyter-notebooks/: 1_send_prompt_programatically.ipynb  2_programatic_prompting_and_memory.ipynb  3_memory_llms.ipynb  4_quasi_agent.ipynb  5_simple_agent.ipynb  6_agent_with_tools.ipynb
