[project]
name = "agenticai-with-python"
version = "0.1.0"
description = "This is agentic implemtation learning repo"
authors = [
    {name = "[Varun]"}
]
license = {text = "GPL"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litellm (>=1.63.11,<2.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
